Revision history for Verilator

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!

* Verilator 3.8****

***  Support tracing/coverage of underscore signals, bug280.  [by Jason McMullan]

**** Increase define recursions before error.  [Paul Liu]

**** On core dump, print debug suggestions.

* Verilator 3.803 2010/07/10

***  Fix preprocessor preservation of newlines across macro substitutions.

**** Fix preprocessor stringification of nested macros.

**** Fix some constant parameter functions causing crash, bug253. [Nick Bowler]

**** Fix do {...} while() not requiring final semicolon.

* Verilator 3.802 2010/05/01

***  Support runtime access to public signal names.

***  Add /*verilator public_flat_rw*/ for timing-specific public access.

***  Fix word size to match uint64_t on -m64 systems, bug238. [Joe Eiler]

**** Improve error handling on slices of arrays, bug226. [by Byron Bradley]

**** Report errors when extra underscores used in meta-comments.

**** Fix bit reductions on multi-packed dimensions, bug227. [by Byron Bradley]

**** Fix removing $fscanf if assigned to unused var, bug248. [Ashutosh Das]

**** Fix "make install" with configure outside srcdir.  [Stefan Wallentowitz]

**** Fix loop unroller out of memory; change --unroll-stmts.  [Ashutosh Das]

**** Fix trace files with empty modules crashing some viewers.

**** Fix parsing single files > 2GB.  [Jeffrey Short]

**** Fix installing data files as non-executable, bug168. [by Ahmed El-Mahmoudy]

* Verilator 3.801 2010/03/17

***  Support "break", "continue", "return".

***  Support "`default_nettype none|wire".  [Dominic Plunkett]

**** Skip SystemC tests if not installed.  [Iztok Jeras]

**** Fix clock-gates with non-AND complex logic, bug220. [Ashutosh Das]

**** Fix flushing VCD buffers on $stop.  [Ashutosh Das]

**** Fix Mac OS-X compile issues, bug217.  [Joshua Wise, Trevor Williams]
